@@ -1,13 +1,18 @@
 package api;
 
 import com.google.gson.Gson;
-import java.io.*;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.Map.Entry;
+import java.util.stream.Collectors;
 
 public class FetchFromTMDb
 {
@@ -17,51 +22,40 @@ public class FetchFromTMDb
     {
         public Results[] results;
 
-            public class Results
-            {
-                public int id;
-                public String title;
-                public String release_date;
-                public String original_language;
-                public String original_title;
-                public String backdrop_path;
-                public String overview;
-                public String poster_path;
+        public class Results
+        {
+            public int id;
+            public String title;
+            public String release_date;
+            public String original_language;
+            public String original_title;
+            public String backdrop_path;
+            public String overview;
+            public String poster_path;
 
-            }
+        }
     }
+
     FetchFromTMDb(String title)
     {
-        try
-        {
-            String safeTitle = URLEncoder.encode(title, "UTF-8");
-            Map<String, String> params = Map.of("query", safeTitle, "api_key", APIKeys.TMDB_ID, "language", "en-US");
-            initialize(params);
-        }
-        catch (IOException e)
-        {
-            e.printStackTrace();
-        }
+        String safeTitle = URLEncoder.encode(title, StandardCharsets.UTF_8);
+        Map<String, String> params = Map.of("query", safeTitle, "api_key", APIKeys.TMDB_ID, "language", "en-US");
+        initialize(params);
     }
+
     FetchFromTMDb(String title, int year)
     {
-        try
-        {
-            String safeTitle = URLEncoder.encode(title, "UTF-8");
-            Map<String, String> params = Map.of("query", safeTitle, "api_key", APIKeys.TMDB_ID, "language", "en-US", "year", String.valueOf(year));
-            initialize(params);
-        }
-        catch (IOException e)
-        {
-            e.printStackTrace();
-        }
+        String safeTitle = URLEncoder.encode(title, StandardCharsets.UTF_8);
+        Map<String, String> params = Map.of("query", safeTitle, "api_key", APIKeys.TMDB_ID, "language", "en-US", "year", String.valueOf(year));
+        initialize(params);
     }
+
     public void initialize(Map<String, String> queryParameters)
     {
         try
         {
             ArrayList<String> queryPairs = new ArrayList<>();
-            for(Entry<String, String> param : queryParameters.entrySet())
+            for (Entry<String, String> param : queryParameters.entrySet())
             {
                 queryPairs.add(param.getKey() + "=" + param.getValue());
             }
@@ -84,5 +78,9 @@ public class FetchFromTMDb
             e.printStackTrace();
         }
     }
-    public MovieResults getResults() { return results; }
+
+    public MovieResults getResults()
+    {
+        return results;
+    }
 }
